--- a/afd.html
+++ b/afd.html
@@ -44,63 +44,81 @@
 		Players may claim the bounty more than once. 
 		Arrest Fake Daimyo cannot be done with party but is very easy to accomplish.</p>
 <hr>
-/* location 1 */		
+
+<p><b>Location A</b></p>	
 <div class="row">
 
   <div class="column">
 		<a href="https://drive.google.com/uc?id=15walvtPjgS11gRntZvbIKnewAVckDqAB" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=15walvtPjgS11gRntZvbIKnewAVckDqAB"; style="width:100%;height:250px;";></a>
-		<p>xx</p>
+		<p><b>Keywords:</b> Outskirts</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
 
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1KTUwudhL2OpeIoc95p0_uz7XtqirKWFe" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1KTUwudhL2OpeIoc95p0_uz7XtqirKWFe"; style="width:100%;height:250px;";></a>
-		<p>Hint: Ruins</p>
+		<p><b>Keywords:</b> Ruins</p> 
+		<p><b>Location:</b> To the southwest of the border</p>
   </div>
-  </div>
-
 
 <hr>
-/* location 2 */
+
+<p><b>Location B</b></p>
 <div class="row">
 
   <div class="column">
 		<a href="https://drive.google.com/uc?id=16lsn5jiOTZ2xLRCOzoThB1_A9TZFXe_a" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=16lsn5jiOTZ2xLRCOzoThB1_A9TZFXe_a"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Wooden Bridge </p> 
+		<p><b>Location:</b> To the northwest of Konohagakure</p>
   </div>
 
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1KvH6Z-318lxa1TXumWdgoZJXxBUwbJ_t" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1KvH6Z-318lxa1TXumWdgoZJXxBUwbJ_t"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Plants Oasys </p> 
+		<p><b>Location:</b> xx</p>
   </div>
-<p>xx</p>
+
 <hr>
-/* location 3 */
+
+<p><b>Location C</b></p>
 <div class="row">
 
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1meYYIo9sTGMwntGlgKxVSXWv786QMxT2" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1meYYIo9sTGMwntGlgKxVSXWv786QMxT2"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Mushroom </p> 
+		<p><b>Location:</b> Near the broken bridge in Konoha Outskirts </p>
   </div>
 
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1KTwweG31q_YxwnHgQ-edRLFTuyW3ljTB" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1KTwweG31q_YxwnHgQ-edRLFTuyW3ljTB"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Road Sign Junction </p> 
+		<p><b>Location:</b> To the west of land of Wind </p>
   </div>
-<p>xx</p>
+
 <hr>
-/* location 4 */
+
+<p><b>Location D</b></p>
 <div class="row">
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1GhrV3eAXLSa3dTuJ_D37WUuYmaiT8UBp" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1GhrV3eAXLSa3dTuJ_D37WUuYmaiT8UBp"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Cabin </p> 
+		<p><b>Location:</b> Near the cabin in the outskirts of Konohagakure</p>
+
   </div>
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1Kooxb05adutyfXOyTcgiTs3tz68ME3JB" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1Kooxb05adutyfXOyTcgiTs3tz68ME3JB"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Dead Tree Sisal</p> 
+		<p><b>Location:</b> To the east of land of Wind</p>
+
   </div>
 <p>xx</p>
 <hr>
@@ -108,13 +126,18 @@
 <div class="row">
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=15ekooxNVnFGbd-RnUA4s6EjQYk4E3agj" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=15ekooxNVnFGbd-RnUA4s6EjQYk4E3agj"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Waterfall </p> 
+		<p><b>Location:</b> xx </p>
   </div>
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1KmZVNza-TWsiDvx66GNMVF7k5B03nM35" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1KmZVNza-TWsiDvx66GNMVF7k5B03nM35"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> Dead Tree Stone Arch </p> 
+		<p><b>Location:</b> To the north of the border </p>
+
   </div>
 <p>xx</p>
 <hr>
