--- a/afd.html
+++ b/afd.html
@@ -106,8 +106,8 @@
 <div class="row">
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1GhrV3eAXLSa3dTuJ_D37WUuYmaiT8UBp" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1GhrV3eAXLSa3dTuJ_D37WUuYmaiT8UBp"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=15ekooxNVnFGbd-RnUA4s6EjQYk4E3agj" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=15ekooxNVnFGbd-RnUA4s6EjQYk4E3agj"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Cabin </p> 
 		<p><b>Location:</b> Near the cabin in the outskirts of Konohagakure</p>
 
@@ -122,12 +122,12 @@
   </div>
 <p>xx</p>
 <hr>
-/* location 5 */
+<p><b>Location E</b></p>
 <div class="row">
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=15ekooxNVnFGbd-RnUA4s6EjQYk4E3agj" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=15ekooxNVnFGbd-RnUA4s6EjQYk4E3agj"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1GhrV3eAXLSa3dTuJ_D37WUuYmaiT8UBp" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1GhrV3eAXLSa3dTuJ_D37WUuYmaiT8UBp"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Waterfall </p> 
 		<p><b>Location:</b> xx </p>
   </div>
