--- a/afd.html
+++ b/afd.html
@@ -45,6 +45,23 @@
 		Arrest Fake Daimyo cannot be done with party but is very easy to accomplish.</p>
 <hr>
 
+<div class="row">
+
+  <div class="column">
+		<p><b>Konohagakure</b></p> 
+		<a href="https://drive.google.com/uc?id=15walvtPjgS11gRntZvbIKnewAVckDqAB" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=15walvtPjgS11gRntZvbIKnewAVckDqAB"; style="width:100%;height:250px;";></a>
+
+  </div>
+
+  <div class="column">
+		<p><b>Sunagakure</b></p> 
+		<a href="https://drive.google.com/uc?id=1KTUwudhL2OpeIoc95p0_uz7XtqirKWFe" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1KTUwudhL2OpeIoc95p0_uz7XtqirKWFe"; style="width:100%;height:250px;";></a>
+  </div>
+
+<hr>
+
 <p><b>Location A</b></p>	
 <div class="row">
 
