--- a/afd.html
+++ b/afd.html
@@ -137,8 +137,9 @@
 		<p><b>Location:</b> To the east of land of Wind</p>
 
   </div>
-<p>xx</p>
+
 <hr>
+
 <p><b>Location E</b></p>
 <div class="row">
 
@@ -156,21 +157,22 @@
 		<p><b>Location:</b> To the north of the border </p>
 
   </div>
-<p>xx</p>
+
 <hr>
-/* location 6 */
+
 <div class="row">
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv"; style="width:100%;height:250px;";></a>
   </div>
 
   <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdPxx"; style="width:100%;height:250px;";></a>
   </div>
-<p>xx</p>
+<p>You will be teleported inside those strange things where you will encounter the soldiers of the fake daimyo</p>
+
 <hr>
 /* location 7 */
 <div class="row">
