--- a/afd.html
+++ b/afd.html
@@ -160,21 +160,67 @@
 
 <hr>
 
+<!-- wave 1 -->
 <div class="row">
-
+  <div class="column">
+		<a href="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdPxx"; style="width:100%;height:250px;";></a>
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv"; style="width:100%;height:250px;";></a>
   </div>
-
-  <div class="column">
-		<a href="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdPxx"; style="width:100%;height:250px;";></a>
-  </div>
+</div>
 <p>You will be teleported inside those strange things where you will encounter the soldiers of the fake daimyo</p>
 
 <hr>
-/* location 7 */
+
+<!-- wave 2 -->
+<div class="row">
+  <div class="column">
+		<a href="https://drive.google.com/open?id=1D-EnewgThtIvQAnGT1HyHkKhSHfF66yX" target="_blank" style="color:black">
+		<image src="https://drive.google.com/open?id=1D-EnewgThtIvQAnGT1HyHkKhSHfF66yX"; style="width:100%;height:250px;";></a>
+  </div>
+  <div class="column">
+		<a href="https://drive.google.com/open?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy" target="_blank" style="color:black">
+		<image src="https://drive.google.com/open?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy"; style="width:100%;height:250px;";></a>
+  </div>
+</div>
+<p>There is a total of 4 waves with the last wave being the fake daimyo.</p>
+
+<hr>
+
+<!-- wave 3 -->
+<div class="row">
+  <div class="column">
+		<a href="https://drive.google.com/uc?id=1JFQIO3fFrrsvEEY3WbkjTpKi9-CRd4qC" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1JFQIO3fFrrsvEEY3WbkjTpKi9-CRd4qC"; style="width:100%;height:250px;";></a>
+  </div>
+  <div class="column">
+		<a href="https://drive.google.com/uc?id=11BLeomWlIAF8OHlXPC-8QSV7Kg5thbqS" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=11BLeomWlIAF8OHlXPC-8QSV7Kg5thbqS"; style="width:100%;height:250px;";></a>
+  </div>
+<p>The soldier’s level do not adjust to your level. I’am level 55 here but the soldier are still level 30. They can easily be killed with 1 or 2 hits/spells/partner.</p>
+</div>
+
+<hr>
+
+<!-- wave 4 -->
+<div class="row">
+
+  <div class="column">
+		<a href="https://drive.google.com/uc?id=1J2ppKuF6VoXnEaLnUhyAHTvDhsX7thBz" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1J2ppKuF6VoXnEaLnUhyAHTvDhsX7thBz"; style="width:100%;height:250px;";></a>
+  </div>
+
+  <div class="column">
+		<a href="https://drive.google.com/uc?id=1bw1H2TXcfIzp2zekGmhZ5wBAhVQSLlLk" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1bw1H2TXcfIzp2zekGmhZ5wBAhVQSLlLk"; style="width:100%;height:250px;";></a>
+  </div>
+<p>The fake daimyo will then appear at the last wave and since he is only level 1, 1 or 2 hits is enough to kill him.</p>
+</div>
+<hr>
+
+<!-- wave 5 -->
 <div class="row">
 
   <div class="column">
@@ -186,26 +232,8 @@
 		<a href="xx" target="_blank" style="color:black">
 		<image src="xx"; style="width:100%;height:250px;";></a>
   </div>
+</div>
 <p>xx</p>
-<hr>
-/* location 8 */
-<div class="row">
-
-  <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-  </div>
-
-  <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-  </div>
-<p>xx</p>
-<hr>
-
-
-
-
 
 </div>
 <hr>
