--- a/afd.html
+++ b/afd.html
@@ -169,6 +169,7 @@
 		<a href="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv"; style="width:100%;height:250px;";></a>
   </div>
+  </div>
 <p>You will be teleported inside those strange things where you will encounter the soldiers of the fake daimyo</p>
 
 <hr>
@@ -183,6 +184,7 @@
 		<a href="https://drive.google.com/open?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy" target="_blank" style="color:black">
 		<image src="https://drive.google.com/open?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy"; style="width:100%;height:250px;";></a>
   </div>
+  </div>
 <p>There is a total of 4 waves with the last wave being the fake daimyo.</p>
 
 <hr>
@@ -196,6 +198,7 @@
   <div class="column">
 		<a href="https://drive.google.com/uc?id=11BLeomWlIAF8OHlXPC-8QSV7Kg5thbqS" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=11BLeomWlIAF8OHlXPC-8QSV7Kg5thbqS"; style="width:100%;height:250px;";></a>
+  </div>
   </div>
 <p>The soldier’s level do not adjust to your level. I’am level 55 here but the soldier are still level 30. They can easily be killed with 1 or 2 hits/spells/partner.</p>
 
@@ -213,6 +216,8 @@
 		<a href="https://drive.google.com/uc?id=1bw1H2TXcfIzp2zekGmhZ5wBAhVQSLlLk" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1bw1H2TXcfIzp2zekGmhZ5wBAhVQSLlLk"; style="width:100%;height:250px;";></a>
   </div>
+  </div>
+
 <p>The fake daimyo will then appear at the last wave and since he is only level 1, 1 or 2 hits is enough to kill him.</p>
 <hr>
 
@@ -227,6 +232,7 @@
   <div class="column">
 		<a href="xx" target="_blank" style="color:black">
 		<image src="xx"; style="width:100%;height:250px;";></a>
+  </div>
   </div>
 <p>xx</p>
 
