--- a/afd.html
+++ b/afd.html
@@ -164,7 +164,8 @@
 <div class="row">
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdPxx"; style="width:100%;height:250px;";></a>
+		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9Kd"; style="width:100%;height:250px;";></a>
+  </div>
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv"; style="width:100%;height:250px;";></a>
