--- a/afd.html
+++ b/afd.html
@@ -164,7 +164,7 @@
 <div class="row">
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9Kd"; style="width:100%;height:250px;";></a>
+		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP"; style="width:100%;height:250px;";></a>
   </div>
   <div class="column">
 		<a href="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv" target="_blank" style="color:black">
@@ -178,12 +178,12 @@
 <!-- wave 2 -->
 <div class="row">
   <div class="column">
-		<a href="https://drive.google.com/open?id=1D-EnewgThtIvQAnGT1HyHkKhSHfF66yX" target="_blank" style="color:black">
-		<image src="https://drive.google.com/open?id=1D-EnewgThtIvQAnGT1HyHkKhSHfF66yX"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=1D-EnewgThtIvQAnGT1HyHkKhSHfF66yX" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1D-EnewgThtIvQAnGT1HyHkKhSHfF66yX"; style="width:100%;height:250px;";></a>
   </div>
   <div class="column">
-		<a href="https://drive.google.com/open?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy" target="_blank" style="color:black">
-		<image src="https://drive.google.com/open?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy"; style="width:100%;height:250px;";></a>
+		<a href="https://drive.google.com/uc?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy"; style="width:100%;height:250px;";></a>
   </div>
   </div>
 <p>There is a total of 4 waves with the last wave being the fake daimyo.</p>
