--- a/afd.html
+++ b/afd.html
@@ -44,7 +44,7 @@
 		Players may claim the bounty more than once. 
 		Arrest Fake Daimyo cannot be done with party but is very easy to accomplish.</p>
 <hr>
-
+<h1> Locations of the Cave </h1>
 <div class="row">
 
   <div class="column">
@@ -158,6 +158,8 @@
 
   </div>
 
+<hr>
+<h1>Once inside the location</h1>
 <hr>
 
 <!-- wave 1 -->
