--- a/afd.html
+++ b/afd.html
@@ -39,12 +39,14 @@
 <hr>
 		<a href="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q" target="_blank">
 		<image src="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q"; style="width:600px;height:255px;text-align: center;" class="center"></a>
-		<p style="text-align:center">Arrest Fake Daimyo bounty can only be claimed by 10 players each day. 
+		<p style="text-align:center">
+Arrest Fake Daimyo bounty will be posted at the Bounty Handbook at exactly 00:00 , 10:00 and 18:00 (GMT+8)
 		See the “Remaining” at the lower right of the picture for remaining amount. 
 		Players may claim the bounty more than once. 
 		Arrest Fake Daimyo cannot be done with party but is very easy to accomplish.</p>
 <hr>
 <h1 style="text-align:center"> Locations </h1>
+<hr>
 <div class="row">
 
   <div class="column">
@@ -222,31 +224,17 @@
   </div>
 
 <p>The fake daimyo will then appear at the last wave and since he is only level 1, 1 or 2 hits is enough to kill him.</p>
-<hr>
-
-<!-- wave 5 -->
-<div class="row">
-
-  <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-  </div>
-
-  <div class="column">
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-  </div>
-  </div>
-<p>xx</p>
 
 <hr>
 
+<p><b>Important notes:</b>
+<ul>
+<li>The moment you killed the fake daimyo at the end is only the time you will know that you selected the correct location if the bounty was successfully completed.
+<li>If you are fast enough, you can finish more than 1 fake daimyo bounty per day.</li>
+<li>If you are too slow, you might not even be able to get the bounty.</li>
+<li>This bounty has a 2 hour time limit upon taking.</li>
+</p>
 
-
-
-
-
-</div>
 <hr>
 
 <footer>
