--- a/afd.html
+++ b/afd.html
@@ -50,14 +50,14 @@ Arrest Fake Daimyo bounty will be posted at the Bounty Handbook at exactly 00:00
 <div class="row">
 
   <div class="column">
-		<p><b>Konohagakure</b></p> 
+		<h2 style="text-align:center"><b>Konohagakure</b></h2> 
 		<a href="https://drive.google.com/uc?id=1x1_KadEs4O7dFXHk115NrHDZ6gN6nPkx" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1x1_KadEs4O7dFXHk115NrHDZ6gN6nPkx"; style="width:100%;height:400px;";></a>
 
   </div>
 
   <div class="column">
-		<p><b>Sunagakure</b></p> 
+		<h2 style="text-align:center"><b>Sunagakure</b></h2> 
 		<a href="https://drive.google.com/uc?id=1LdC2wB1DSAQux5-7fIXvXhYvk9QKO-AS" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1LdC2wB1DSAQux5-7fIXvXhYvk9QKO-AS"; style="width:100%;height:400px;";></a>
   </div>
@@ -234,8 +234,6 @@ Arrest Fake Daimyo bounty will be posted at the Bounty Handbook at exactly 00:00
 <li>If you are too slow, you might not even be able to get the bounty.</li>
 <li>This bounty has a 2 hour time limit upon taking.</li>
 </p>
-
-<hr>
 
 <footer>
   <p>Footer</p>
