--- a/navbar.html
+++ b/navbar.html
@@ -13,6 +13,10 @@
       <button class="dropbtn";><a href="#";> Bounty Handbook <i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
       <a href="/sclass.html"> S Class </a>
+		<ul class="dropdown-menu">
+          <li><a tabindex="-1" href="/afd.html">Arrest Fake Daimyo</a></li>
+          <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
+		</ul>  
       <a href="/aclass.html"> A Class </a>
       <a href="/bclass.html"> B Class </a>
       <a href="/cclass.html"> C Class </a>
