--- a/navbar.html
+++ b/navbar.html
@@ -12,15 +12,21 @@
   <div class="dropdown";>
       <button class="dropbtn";><a href="#";> Bounty Handbook <i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
-      <a href="/sclass.html"> S Class </a>
-		<ul class="dropdown-menu">
-          <li><a tabindex="-1" href="/afd.html">Arrest Fake Daimyo</a></li>
-          <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
-		</ul>  
-      <a href="/aclass.html"> A Class </a>
-      <a href="/bclass.html"> B Class </a>
-      <a href="/cclass.html"> C Class </a>
-      <a href="/dclass.html"> D Class </a>
+	
+    <ul class="dropdown-menu">
+	  <li class="dropdown-submenu">
+        <a class="test" tabindex="-1" href="#"> S Class <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a tabindex="-1" href="#">Arrest Fake Daimyo</a></li>
+          <li><a tabindex="-1" href="#">Rescue Jiraiya</a></li>
+        </ul>
+      </li>
+      <li><a tabindex="-1" href="#">A Class</a></li>
+      <li><a tabindex="-1" href="#">B Class</a></li>
+      
+
+    </ul>
+	
     </div>
   </div> 
 
