--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,14 @@
 <head>
-		<link rel="stylesheet" type="text/css" href="/main.css">
+	<link rel="stylesheet" type="text/css" href="/main.css">
+	<script>
+	$(document).ready(function(){
+	$('.dropdown-submenu a.test').on("click", function(e){
+    $(this).next('ul').toggle();
+    e.stopPropagation();
+    e.preventDefault();
+	});
+	});
+	</script>
 </head>
 <body>
 
