--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,16 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="/main.css">
+<style>
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -1px;
+}
+</style>
 </head>
 <body>
 
