--- a/navbar.html
+++ b/navbar.html
@@ -1,16 +1,5 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="/main.css">
-<style>
-.dropdown-submenu {
-  position: relative;
-}
-
-.dropdown-submenu .dropdown-menu {
-  top: 0;
-  left: 100%;
-  margin-top: -1px;
-}
-</style>
 </head>
 <body>
 
@@ -24,16 +13,11 @@
       <button class="dropbtn";><a href="#";> Bounty Handbook <i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
 	
-    <ul class="dropdown-menu">
-	  <li class="dropdown-submenu">
-        <a class="test" tabindex="-1" href="#"> S Class <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a tabindex="-1" href="#">Arrest Fake Daimyo</a></li>
-          <li><a tabindex="-1" href="#">Rescue Jiraiya</a></li>
-        </ul>
-      </li>
-      <li><a tabindex="-1" href="#">A Class</a></li>
-      <li><a tabindex="-1" href="#">B Class</a></li>
+	<a href="/sclass.html">S Class</a>
+    <a href="/aclass.html">A Class</a>
+    <a href="/bclass.html">B Class</a>
+	<a href="/cclass.html">C Class</a>
+	<a href="/dclass.html">D Class</a>
       
 
     </ul>
