--- a/navbar.html
+++ b/navbar.html
@@ -10,23 +10,18 @@
 <div class="navbar";>
   
   <div class="dropdown";>
-      <button class="dropbtn";><a href="#";> Bounty Handbook <i class="fa fa-caret-down"></i></a></button>
+      <button class="dropbtn";><a href="/bh.html";> Bounty Handbook <i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
-	
 	<a href="/sclass.html">S Class</a>
-    <a href="/aclass.html">A Class</a>
-    <a href="/bclass.html">B Class</a>
+	<a href="/aclass.html">A Class</a>
+	<a href="/bclass.html">B Class</a>
 	<a href="/cclass.html">C Class</a>
 	<a href="/dclass.html">D Class</a>
-      
-
-    </ul>
-	
     </div>
   </div> 
 
   <div class="dropdown";>
-      <button class="dropbtn"><a href="#";> Boss Monsters <i class="fa fa-caret-down"></i></a></button>
+      <button class="dropbtn"><a href="/bm.html";> Boss Monsters <i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
       <a href="/landofriver.html"> Land of River </a>
       <a href="/sunagakure.html"> Sunagakure </a>
@@ -36,7 +31,7 @@
   </div> 
   
   <div class="dropdown";>
-      <button class="dropbtn"><a href="#";> Big World Quests<i class="fa fa-caret-down"></i></a></button>
+      <button class="dropbtn"><a href="/bwq.html";> Big World Quests<i class="fa fa-caret-down"></i></a></button>
     <div class="dropdown-content">
       <a href="/rby.html"> Red, Blue, Yellow Eggs </a>
       <a href="/ht.html"> Help Trader </a>
