--- a/sclass.html
+++ b/sclass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>  
-  <title>Arrest Fake Daimyo</title>
+  <title>S Class Bounty</title>
 	<script>
 	function includeHTML() {
 	var z, i, elmnt, file, xhttp;
