--- a/sclass.html
+++ b/sclass.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>  
-  <title>S Class Bounty</title>
+  <title>Arrest Fake Daimyo</title>
 	<script>
 	function includeHTML() {
 	var z, i, elmnt, file, xhttp;
@@ -41,13 +41,13 @@
 
   <div class="column"> 
 		<a href="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs"; style="width:100%;height:400px;";></a>
+		<image src="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column">
-	<p> Arrest Fake Daimyo </p>
+	<h3> Arrest Fake Daimyo </h3>
   </div>
-
+</div>
 <hr>
 
 
