--- a/sclass.html
+++ b/sclass.html
@@ -39,11 +39,12 @@
 
 <div class="row">
 
-  <div class="column1"> 
+  <div class="column" style="width:25%"> 
 		<a href="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs"; style="width:40%;height:150px;";></a>
+		<image src="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs"; style="width:25%;height:150px;";></a>
   </div>
-  <div class="column1">
+
+  <div class="column" style="width:75%">
 	<h3> Arrest Fake Daimyo </h3>
   </div>
 </div>
