--- a/sclass.html
+++ b/sclass.html
@@ -38,18 +38,28 @@
 		<h2>S Class Bounty</h2>
 
 <div class="row">
-
   <div class="column" style="width:25%"> 
-		<a href="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs" target="_blank" style="color:black">
+		<a href="/afd.html" target="_blank" style="color:black">
 		<image src="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
-	<h3> Arrest Fake Daimyo </h3>
+  	<a href="/afd.html" target="_blank" style="color:black">
+	<h3> Arrest Fake Daimyo </h3></a>
   </div>
 </div>
 <hr>
+<div class="row">
+  <div class="column" style="width:25%"> 
+		<a href="/rj.html" target="_blank" style="color:black">
+		<image src="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs"; style="width:100%;height:150px;";></a>
+  </div>
 
+  <div class="column" style="width:75%">
+  	<a href="/rj.html" target="_blank" style="color:black">
+	<h3> Rescue Jiraiya </h3></a>
+  </div>
+</div>
 
 <footer>
   <p>Footer</p>
