--- a/sclass.html
+++ b/sclass.html
@@ -52,7 +52,7 @@
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/rj.html" target="_blank" style="color:black">
-		<image src="![rj9](https://user-images.githubusercontent.com/64807615/82131702-9085bc80-980a-11ea-9bff-886d8e1e4e32.jpg"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82131702-9085bc80-980a-11ea-9bff-886d8e1e4e32.jpg"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
