--- a/sclass.html
+++ b/sclass.html
@@ -40,11 +40,11 @@
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/afd.html" style="color:black">
-		<image src="https://drive.google.com/uc?id=1DNDA5hYpVcbkcfVbqwDtUo3YpOKlHchs"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82132052-10f9ec80-980e-11ea-9ba7-857dbfb7598e.jpg"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
-  	<a href="/afd.html" target="_blank" style="color:black">
+  	<a href="/afd.html" style="color:black">
 	<h3> Arrest Fake Daimyo </h3></a>
   </div>
 </div>
@@ -52,11 +52,11 @@
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/rj.html" style="color:black">
-		<image src="![rj9]"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82131702-9085bc80-980a-11ea-9bff-886d8e1e4e32.jpg"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
-  	<a href="/rj.html" target="_blank" style="color:black">
+  	<a href="/rj.html" style="color:black">
 	<h3> Rescue Jiraiya </h3></a>
   </div>
 </div>
