--- a/afd.html
+++ b/afd.html
@@ -37,8 +37,8 @@
 	<script>includeHTML();</script>
 		<h2>Arrest Fake Daimyo</h2>
 <hr>
-		<a href="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q" target="_blank">
-		<image src="https://drive.google.com/uc?id=1_vMFJGJPSyJ5YEvKHLWSTXG3-7bIfw1Q"; style="width:600px;height:255px;text-align: center;" class="center"></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132032-08091b00-980e-11ea-8e20-5c9697938467.png" target="_blank">
+		<image src="https://user-images.githubusercontent.com/64807615/82132032-08091b00-980e-11ea-8e20-5c9697938467.png"; style="width:600px;height:255px;text-align: center;" class="center"></a>
 		<p style="text-align:center">
 Arrest Fake Daimyo bounty will be posted at the Bounty Handbook at exactly 00:00 , 10:00 and 18:00 (GMT+8)
 		See the “Remaining” at the lower right of the picture for remaining amount. 
