--- a/afd.html
+++ b/afd.html
@@ -40,9 +40,10 @@
 		<a href="https://user-images.githubusercontent.com/64807615/82132032-08091b00-980e-11ea-8e20-5c9697938467.png" target="_blank">
 		<image src="https://user-images.githubusercontent.com/64807615/82132032-08091b00-980e-11ea-8e20-5c9697938467.png"; style="width:600px;height:255px;text-align: center;" class="center"></a>
 		<p style="text-align:center">
-Arrest Fake Daimyo bounty will be posted at the Bounty Handbook at exactly 00:00 , 10:00 and 18:00 (GMT+8)
+		Arrest Fake Daimyo bounty will be posted at the Bounty Handbook at exactly 00:00 , 10:00 and 18:00 (GMT+8)
+		Up to 2 Arrest Fake Daimyo posts can spawn at the bounty board
+		Each post can be claim 10 times. Players may claim the bounty more than once. 
 		See the “Remaining” at the lower right of the picture for remaining amount. 
-		Players may claim the bounty more than once. 
 		Arrest Fake Daimyo cannot be done with party but is very easy to accomplish.</p>
 <hr>
 <h1 style="text-align:center"> Locations </h1>
@@ -51,15 +52,15 @@ Arrest Fake Daimyo bounty will be posted at the Bounty Handbook at exactly 00:00
 
   <div class="column">
 		<h2 style="text-align:center"><b>Konohagakure</b></h2> 
-		<a href="https://drive.google.com/uc?id=1x1_KadEs4O7dFXHk115NrHDZ6gN6nPkx" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1x1_KadEs4O7dFXHk115NrHDZ6gN6nPkx"; style="width:100%;height:400px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132029-050e2a80-980e-11ea-95cf-9e061c6749f7.png" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132029-050e2a80-980e-11ea-95cf-9e061c6749f7.png"; style="width:100%;height:400px;";></a>
 
   </div>
 
   <div class="column">
 		<h2 style="text-align:center"><b>Sunagakure</b></h2> 
-		<a href="https://drive.google.com/uc?id=1LdC2wB1DSAQux5-7fIXvXhYvk9QKO-AS" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1LdC2wB1DSAQux5-7fIXvXhYvk9QKO-AS"; style="width:100%;height:400px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132031-07708480-980e-11ea-96d2-6e02bcecb5d4.png" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132031-07708480-980e-11ea-96d2-6e02bcecb5d4.png"; style="width:100%;height:400px;";></a>
   </div>
 
 <hr>
@@ -68,15 +69,15 @@ Arrest Fake Daimyo bounty will be posted at the Bounty Handbook at exactly 00:00
 <div class="row">
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=15walvtPjgS11gRntZvbIKnewAVckDqAB" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=15walvtPjgS11gRntZvbIKnewAVckDqAB"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132033-08a1b180-980e-11ea-8abb-314ee26cc644.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132033-08a1b180-980e-11ea-8abb-314ee26cc644.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Outskirts</p> 
 		<p><b>Location:</b> To the southwest of the border</p>
   </div>
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1KTUwudhL2OpeIoc95p0_uz7XtqirKWFe" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1KTUwudhL2OpeIoc95p0_uz7XtqirKWFe"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132039-0b040b80-980e-11ea-88fc-6e9fbf2f4b3d.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132039-0b040b80-980e-11ea-88fc-6e9fbf2f4b3d.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Ruins</p> 
 		<p><b>Location:</b> To the southwest of the border</p>
   </div>
