--- a/afd.html
+++ b/afd.html
@@ -88,17 +88,17 @@
 <div class="row">
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=16lsn5jiOTZ2xLRCOzoThB1_A9TZFXe_a" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=16lsn5jiOTZ2xLRCOzoThB1_A9TZFXe_a"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132034-08a1b180-980e-11ea-98f9-4b4c3d0e9b00.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132034-08a1b180-980e-11ea-98f9-4b4c3d0e9b00.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Wooden Bridge </p> 
 		<p><b>Location:</b> To the northwest of Konohagakure</p>
   </div>
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1KvH6Z-318lxa1TXumWdgoZJXxBUwbJ_t" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1KvH6Z-318lxa1TXumWdgoZJXxBUwbJ_t"; style="width:100%;height:250px;";></a>
-		<p><b>Keywords:</b> Plants Oasys </p> 
-		<p><b>Location:</b> xx</p>
+		<a href="https://user-images.githubusercontent.com/64807615/82132040-0b9ca200-980e-11ea-85b5-35c3c345ec11.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132040-0b9ca200-980e-11ea-85b5-35c3c345ec11.jpg"; style="width:100%;height:250px;";></a>
+		<p><b>Keywords:</b> PlantsOasis </p> 
+		<p><b>Location:</b> To the northeast of the Scorching Desert</p>
   </div>
 
 <hr>
@@ -107,15 +107,15 @@
 <div class="row">
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1meYYIo9sTGMwntGlgKxVSXWv786QMxT2" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1meYYIo9sTGMwntGlgKxVSXWv786QMxT2"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132035-093a4800-980e-11ea-81e5-d94ae33135ac.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132035-093a4800-980e-11ea-81e5-d94ae33135ac.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Mushroom </p> 
 		<p><b>Location:</b> Near the broken bridge in Konoha Outskirts </p>
   </div>
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1KTwweG31q_YxwnHgQ-edRLFTuyW3ljTB" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1KTwweG31q_YxwnHgQ-edRLFTuyW3ljTB"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132041-0c353880-980e-11ea-8fda-7f8552374f39.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132041-0c353880-980e-11ea-8fda-7f8552374f39.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Road Sign Junction </p> 
 		<p><b>Location:</b> To the west of land of Wind </p>
   </div>
