--- a/afd.html
+++ b/afd.html
@@ -126,16 +126,16 @@
 <div class="row">
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=15ekooxNVnFGbd-RnUA4s6EjQYk4E3agj" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=15ekooxNVnFGbd-RnUA4s6EjQYk4E3agj"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132036-09d2de80-980e-11ea-8b1f-16f7c9f7cd9a.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132036-09d2de80-980e-11ea-8b1f-16f7c9f7cd9a.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Cabin </p> 
 		<p><b>Location:</b> Near the cabin in the outskirts of Konohagakure</p>
 
   </div>
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1Kooxb05adutyfXOyTcgiTs3tz68ME3JB" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1Kooxb05adutyfXOyTcgiTs3tz68ME3JB"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132042-0c353880-980e-11ea-89d3-1999ad463690.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132042-0c353880-980e-11ea-89d3-1999ad463690.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Dead Tree Sisal</p> 
 		<p><b>Location:</b> To the east of land of Wind</p>
 
@@ -147,15 +147,15 @@
 <div class="row">
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1GhrV3eAXLSa3dTuJ_D37WUuYmaiT8UBp" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1GhrV3eAXLSa3dTuJ_D37WUuYmaiT8UBp"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132038-0a6b7500-980e-11ea-9537-df21ed9edef1.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132038-0a6b7500-980e-11ea-9537-df21ed9edef1.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Waterfall </p> 
 		<p><b>Location:</b> xx </p>
   </div>
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1KmZVNza-TWsiDvx66GNMVF7k5B03nM35" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1KmZVNza-TWsiDvx66GNMVF7k5B03nM35"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132043-0ccdcf00-980e-11ea-98f6-2529f537105c.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132043-0ccdcf00-980e-11ea-98f6-2529f537105c.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Keywords:</b> Dead Tree Stone Arch </p> 
 		<p><b>Location:</b> To the north of the border </p>
 
@@ -168,12 +168,12 @@
 <!-- wave 1 -->
 <div class="row">
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1J8AjSiaPPo1DDOGC927oxQgxVHHX9KdP"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132044-0d666580-980e-11ea-9c52-1ffdacc1df0c.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132044-0d666580-980e-11ea-9c52-1ffdacc1df0c.jpg"; style="width:100%;height:250px;";></a>
   </div>
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1BUeTdrWhIeWWmlMglmFTJKLgL0YBTtBv"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132049-0fc8bf80-980e-11ea-8749-a720fe52c62e.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132049-0fc8bf80-980e-11ea-8749-a720fe52c62e.jpg"; style="width:100%;height:250px;";></a>
   </div>
   </div>
 <p>You will be teleported inside those strange things where you will encounter the soldiers of the fake daimyo</p>
@@ -183,12 +183,12 @@
 <!-- wave 2 -->
 <div class="row">
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1D-EnewgThtIvQAnGT1HyHkKhSHfF66yX" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1D-EnewgThtIvQAnGT1HyHkKhSHfF66yX"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132045-0dfefc00-980e-11ea-8edf-349649cb5a80.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132045-0dfefc00-980e-11ea-8edf-349649cb5a80.jpg"; style="width:100%;height:250px;";></a>
   </div>
   <div class="column">
-		<a href="https://drive.google.com/uc?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=12fvicUQi9CPfi82U7p0KDL7EYr_bt8Dy"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132050-0fc8bf80-980e-11ea-9fca-1593a726e03f.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132050-0fc8bf80-980e-11ea-9fca-1593a726e03f.jpg"; style="width:100%;height:250px;";></a>
   </div>
   </div>
 <p>There is a total of 4 waves with the last wave being the fake daimyo.</p>
