--- a/afd.html
+++ b/afd.html
@@ -198,12 +198,12 @@
 <!-- wave 3 -->
 <div class="row">
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1JFQIO3fFrrsvEEY3WbkjTpKi9-CRd4qC" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1JFQIO3fFrrsvEEY3WbkjTpKi9-CRd4qC"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132047-0e979280-980e-11ea-8ebc-7e4e3edecd93.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132047-0e979280-980e-11ea-8ebc-7e4e3edecd93.jpg"; style="width:100%;height:250px;";></a>
   </div>
   <div class="column">
-		<a href="https://drive.google.com/uc?id=11BLeomWlIAF8OHlXPC-8QSV7Kg5thbqS" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=11BLeomWlIAF8OHlXPC-8QSV7Kg5thbqS"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132051-10615600-980e-11ea-963b-e46d61b4adfb.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132051-10615600-980e-11ea-963b-e46d61b4adfb.jpg"; style="width:100%;height:250px;";></a>
   </div>
   </div>
 <p>The soldier’s level do not adjust to your level. I’am level 55 here but the soldier are still level 30. They can easily be killed with 1 or 2 hits/spells/partner.</p>
@@ -214,13 +214,13 @@
 <div class="row">
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1J2ppKuF6VoXnEaLnUhyAHTvDhsX7thBz" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1J2ppKuF6VoXnEaLnUhyAHTvDhsX7thBz"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132048-0f302900-980e-11ea-8300-df33735ad17b.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132048-0f302900-980e-11ea-8300-df33735ad17b.jpg"; style="width:100%;height:250px;";></a>
   </div>
 
   <div class="column">
-		<a href="https://drive.google.com/uc?id=1bw1H2TXcfIzp2zekGmhZ5wBAhVQSLlLk" target="_blank" style="color:black">
-		<image src="https://drive.google.com/uc?id=1bw1H2TXcfIzp2zekGmhZ5wBAhVQSLlLk"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82132052-10f9ec80-980e-11ea-9ba7-857dbfb7598e.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82132052-10f9ec80-980e-11ea-9ba7-857dbfb7598e.jpg"; style="width:100%;height:250px;";></a>
   </div>
   </div>
 
