--- a/bh.html
+++ b/bh.html
@@ -40,7 +40,7 @@
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/sclass.html" style="color:black">
-		<image src="https://user-images.githubusercontent.com/64807615/82132514-19085b00-9813-11ea-8b50-7d15e57d052f.jpg"; style="width:75%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82132514-19085b00-9813-11ea-8b50-7d15e57d052f.jpg"; style="width:100px;height:100px;";></a>
   </div>
 
   <div class="column" style="width:75%">
