--- a/bh.html
+++ b/bh.html
@@ -48,50 +48,50 @@
 	<h3> S Class Bounty </h3></a>
   </div>
 </div>
-<hr>
+
 <div class="row">
-  <div class="column" style="width:25%"> 
+  <div class="column" style="width:15%"> 
 		<a href="/aclass.html" style="color:black">
-		<image src=" https://user-images.githubusercontent.com/64807615/82132515-19a0f180-9813-11ea-9cd5-11266d32aee9.jpg "; style="width:100%;height:150px;";></a>
+		<image src=" https://user-images.githubusercontent.com/64807615/82132515-19a0f180-9813-11ea-9cd5-11266d32aee9.jpg "; style="width:100%;height:100%;";></a>
   </div>
 
-  <div class="column" style="width:75%">
+  <div class="column" style="width:85%">
   	<a href="/aclass.html" style="color:black">
 	<h3> A Class Bounty </h3></a>
   </div>
 </div>
-<hr>
+
 <div class="row">
-  <div class="column" style="width:25%"> 
+  <div class="column" style="width:15%"> 
 		<a href="/bclass.html" style="color:black">
-		<image src=" https://user-images.githubusercontent.com/64807615/82132516-1a398800-9813-11ea-8769-650c7b7e7062.jpg"; style="width:100%;height:150px;";></a>
+		<image src=" https://user-images.githubusercontent.com/64807615/82132516-1a398800-9813-11ea-8769-650c7b7e7062.jpg"; style="width:100%;height:100%;";></a>
   </div>
 
-  <div class="column" style="width:75%">
+  <div class="column" style="width:85%">
   	<a href="/bclass.html" style="color:black">
 	<h3> B Class Bounty </h3></a>
   </div>
 </div>
-<hr>
+
 <div class="row">
-  <div class="column" style="width:25%"> 
+  <div class="column" style="width:15%"> 
 		<a href="/cclass.html" style="color:black">
-		<image src="https://user-images.githubusercontent.com/64807615/82132517-1ad21e80-9813-11ea-882b-803292244247.jpg"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82132517-1ad21e80-9813-11ea-882b-803292244247.jpg"; style="width:100%;height:100%;";></a>
   </div>
 
-  <div class="column" style="width:75%">
+  <div class="column" style="width:85%">
   	<a href="/cclass.html" style="color:black">
 	<h3> C Class Bounty </h3></a>
   </div>
 </div>
-<hr>
+
 <div class="row">
-  <div class="column" style="width:25%"> 
+  <div class="column" style="width:15%"> 
 		<a href="/dclass.html" style="color:black">
-		<image src="https://user-images.githubusercontent.com/64807615/82132519-1b6ab500-9813-11ea-96ea-2bd878945c65.jpg"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82132519-1b6ab500-9813-11ea-96ea-2bd878945c65.jpg"; style="width:100%;height:100%;";></a>
   </div>
 
-  <div class="column" style="width:75%">
+  <div class="column" style="width:85%">
   	<a href="/dclass.html" style="color:black">
 	<h3> D Class Bounty </h3></a>
   </div>
